      match now, except for header case mismatches.
- [ ] Visit comment in v2/yarpctest/reqres.go:
      TODO: Headers like User-Agent, Content-Length, etc. make their way to the
      user-level Request object. For now, we're doing the super set check but we
      should do something more specific once yarpc/yarpc.io#2 is resolved.

Encodings:
- [x] Drop raw encoding
- [x] Port JSON encoding
- [ ] Port Thrift encoding
      - [ ] Pull the default routing name from a Thrift annotation.
      - [ ] Add `sanitization_test.go` in plugin after TChannel is ported.
      - [ ] Revert yarpc plugin name from `thriftrw-plugin-yarpc2` to `thriftrw-plugin-yarpc`.
      - [ ] Port https://github.com/yarpc/yarpc-go/pull/1482/files into spring.
- [ ] Port / re-create Protobuf encoding
      - [x] Rewrite the protoc-gen-yarpc-go plugin.
      - [ ] Add end-to-end test that uses gRPC transport with protobuf encoding.
      - [ ] Explore threading the context in Protobuf code generation, i.e. in `Stream.Receive`.

Transports:
- [x] Port TChannel transport
      - [ ] Restore buffer pooling
      - [ ] Restore inbound_test.go
      - [ ] Restore handler_test.go
      - [ ] Restore outbound_test.go
      - [ ] Gracefully shut down: stop should block until context expires or all requests drain.
      - [ ] Add TChannel to gauntlet test
- [x] Port or recreate gRPC transport
      - [ ] Ecapsulate gRPC's TransportCredentials interface
            to avoid passing a direct dependency on grpc-go to
            YARPC dependees.
- [ ] Use `req` and `res` as variable names for consistency.
      - [x] HTTP
      - [x] TChannel
      - [x] gRPC

Peer Lists:
- [x] Port abstract peer list to v2/yarpcpeerlist
- [ ] Port yarpcroundrobin
- [x] Port yarpcrandpeer
- [ ] Port yarpcchoiceoftwo
- [x] Port yarpcfewestpending
- [ ] Port yarpchashring32
- [ ] Remove PendingRequestCount from Status
      - [ ] pendingheap shold capture information on peerScore struct

To port peer lists forward: